fix scrollbar

--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -130,8 +130,17 @@
   background: var(--whiteOriginColor);
   border: 1px solid var(--headerColor);
   z-index: 10;
-  scrollbar-width: thin;
-  scrollbar-color: var(--headerColor) transparent;
+}
+
+::-webkit-scrollbar {
+  width: 24px;
+  background: var(--whiteOriginColor);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--grayLightColor);
+  border-radius: 12px;
+  border: 8px solid var(--whiteOriginColor);
 }
 
 .dropdownBrand {
