--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,8 @@ button {
   cursor: pointer;
   display: block;
   background-color: transparent;
+  scrollbar-width: thin; /* "auto" або "thin"  */
+  scrollbar-color: var(--grayLightColor);
 }
 
 img {
